# columbo

./: .bandit  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  requirements-bootstrap.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/Cache Python dependencies/: action.yml
.github/actions/Caching Packages Dependencies/: action.yml
.github/actions/build-dist/: action.sh
.github/actions/initialize-hatch/: action.yml
.github/actions/install-dependencies/: action.sh  action.yml
.github/actions/publish-docs-with-mike/: action.sh  action.yml  update_docs_for_version.sh
.github/actions/verify-wheel/: action.sh  action.yml  test_module_import.py
.github/workflows/: detect_version_bump.yml  lint.yml  main.yml  publish_dev_wheel.yml  publish_release.yml
0.10.0/: index.html
0.10.0/api/: index.html
0.10.0/development-guide/: index.html
0.10.0/getting-started/: index.html
0.10.0/usage-guide/command-line/: index.html
0.10.0/usage-guide/validators/: index.html
0.10.1/: index.html
0.10.1/api/: index.html
0.10.1/changelog/: index.html
0.10.1/getting-started/: index.html
0.10.1/usage-guide/command-line/: index.html
0.10.1/usage-guide/fundamentals/: index.html
0.10.1/usage-guide/interactions/: index.html
0.10.1/usage-guide/optional-questions-and-branching/: index.html
0.11.0/: 404.html  index.html  sitemap.xml
0.11.0/api/: index.html
0.11.0/changelog/: index.html
0.11.0/development-guide/: index.html
0.11.0/examples/: branching_story.py  index.html  optional_questions.py
0.11.0/getting-started/: index.html
0.11.0/search/: search_index.json
0.11.0/usage-guide/command-line/: index.html
0.11.0/usage-guide/fundamentals/: index.html
0.11.0/usage-guide/interactions/: index.html
0.11.0/usage-guide/optional-questions-and-branching/: index.html
0.11.0/usage-guide/validators/: index.html
0.11.0/why-columbo/: index.html
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/api/: index.html
0.12.0/changelog/: index.html
0.12.0/development-guide/: index.html
0.12.0/examples/: index.html  optional_questions.py
0.12.0/getting-started/: index.html
0.12.0/search/: search_index.json
0.12.0/usage-guide/command-line/: index.html
0.12.0/usage-guide/fundamentals/: index.html
0.12.0/usage-guide/interactions/: index.html
0.12.0/usage-guide/optional-questions-and-branching/: index.html
0.12.0/usage-guide/validators/: index.html
0.12.0/why-columbo/: index.html
0.13.0/: 404.html  index.html  objects.inv  sitemap.xml
0.13.0.post1/: 404.html  index.html  sitemap.xml
0.13.0.post1/api/: index.html
0.13.0.post1/changelog/: index.html
0.13.0.post1/development-guide/: index.html
0.13.0.post1/examples/: index.html  index_command_line_answers.py  optional_questions_with_value_if_not_asked.py
0.13.0.post1/getting-started/: index.html
0.13.0.post1/usage-guide/command-line/: index.html
0.13.0.post1/usage-guide/fundamentals/: index.html
0.13.0.post1/why-columbo/: index.html
0.13.0/api/: index.html
0.13.0/changelog/: index.html
0.13.0/development-guide/: index.html
0.13.0/examples/: index.html  index_user_prompts.py
0.13.0/getting-started/: index.html
0.13.0/search/: search_index.json
0.13.0/why-columbo/: index.html
0.14.0/: 404.html  index.html  objects.inv  sitemap.xml
0.14.0/api/: index.html
0.14.0/changelog/: index.html
0.14.0/development-guide/: index.html
0.14.0/examples/: index.html
0.14.0/getting-started/: index.html
0.14.0/search/: search_index.json
0.14.0/why-columbo/: index.html
0.9.0/: index.html
0.9.0/CHANGELOG/: index.html
0.9.0/api/: index.html
0.9.0/development-guide/: index.html
CHANGELOG/: index.html
_dev/api/: index.html
_dev/getting-started/: index.html
_dev/usage-guide/: index.html
api/: index.html
changelog/: index.html
columbo/: __init__.py  _cli.py  _exception.py  _interaction.py  _types.py  _user_io.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/development-guide/: index.html
dev/examples/: alternate_dynamic_options.py  branching_story.py  index.html  optional_questions_with_value_if_not_asked.py
dev/getting-started/: index.html
dev/search/: search_index.json
dev/usage-guide/: index.html
dev/why-columbo/: index.html
development-guide/: index.html
docker/: bump_version.sh  devbox.dockerfile  run_tests.sh  update_docs_for_version.sh  validate_docs.sh
docs/: api.md  development-guide.md  getting-started.md  index.md  usage-guide.md  why-columbo.md
docs/examples/: README.md  alternate_branching_story.py  alternate_optional_questions.py  basic.py  branching_story.py  index_command_line_answers.py  index_user_prompts.py  optional_questions.py  validators.py
docs/usage-guide/: advanced-usage.md  command-line.md  fundamentals.md  interactions.md  optional-questions-and-branching.md  validators.md
examples/: README.md  basic.py  optional_questions.py
getting-started/: index.html
latest/: 404.html  index.html
latest/CHANGELOG/: index.html
latest/api/: index.html
latest/changelog/: index.html
latest/development-guide/: index.html
latest/examples/: index.html
latest/getting-started/: index.html
latest/usage-guide/: index.html
latest/why-columbo/: index.html
search/: search_index.json
tests/: cli_test.py  exception_test.py  interaction_test.py  sample_data.py  user_io_test.py
usage-guide/: index.html
usage-guide/command-line/: index.html
usage-guide/fundamentals/: index.html
usage-guide/interactions/: index.html
usage-guide/optional-questions-and-branching/: index.html
usage-guide/validators/: index.html
util/mkdocstrings_patch_type_aliases/: setup.py
(+29 files in other folders)
