[build-system]
requires = ["hatchling==1.18.0"]
build-backend = "hatchling.build"

[project]
name = "columbo"
version = "0.13.0"
description = "Specify a dynamic set of questions to ask a user and get their answers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "Patrick Lannigan", email = "p.lannigan@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "prompt-toolkit~=3.0",
]

[project.urls]
Homepage = "https://github.com/plannigan/columbo"
changelog = "https://github.com/plannigan/columbo/blob/main/CHANGELOG.md"
issues = "https://github.com/plannigan/columbo/issues"
documentation = "https://plannigan.github.io/columbo"

[tool.hatch.build.targets.sdist]
include = [
    "/columbo",
]

# type checking
[tool.mypy]
files = [
    "columbo",
    "tests",
]
show_error_codes = true
warn_unused_configs = true
pretty = true
strict = true
disallow_any_explicit = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.sample_data",
]
disallow_untyped_defs = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=columbo --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/columbo_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# code formatting
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "columbo/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "Columbo - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""
