[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "columbo"
version = "0.14.0"
description = "Specify a dynamic set of questions to ask a user and get their answers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Patrick Lannigan", email = "p.lannigan@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "prompt-toolkit~=3.0",
]

[project.urls]
Homepage = "https://github.com/plannigan/columbo"
changelog = "https://github.com/plannigan/columbo/blob/main/CHANGELOG.md"
issues = "https://github.com/plannigan/columbo/issues"
documentation = "https://plannigan.github.io/columbo"

[tool.hatch.build.targets.sdist]
include = [
    "/columbo",
]

# environment management & scripts
[tool.hatch.envs.default]
installer = "uv"
description = "Test and lint the project code"
dependencies = [
    "coverage==7.13.1",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pdbpp==0.12.0.post1",
    "ruff==0.14.14",
]
[tool.hatch.envs.default.scripts]
test-no-cov = "pytest --no-cov {args}"
test = "pytest --cov-report html {args}"
test-ci = "pytest {args}"
typing = "mypy"
_fmt = [
    "ruff check --fix .",
    "ruff format .",
]
ruff-check = "ruff check columbo tests"
ruff-format-check = "ruff format --check columbo tests"
check-strict = [
    "ruff-check",
    "ruff-format-check",
    "typing",
    "test",
]
check = [
    "_fmt",
    "typing",
    "test",
]
test-docs-examples = [
    "./docker/validate_docs.sh"
]

[tool.hatch.envs.bump]
installer = "uv"
description = "Release a new version"
detached = true
dependencies = [
    "hyper-bump-it==0.5.3"
]
[tool.hatch.envs.bump.scripts]
it = "hyper-bump-it {args}"

[tool.hatch.envs.docs]
installer = "uv"
description = "Generate documentation for the project"
dependencies = [
    "mike==2.1.3",
    "markdown-include==0.8.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==1.0.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve --dev-addr=0.0.0.0:8000"

# type checking
[tool.mypy]
files = [
    "columbo",
    "tests",
]
show_error_codes = true
warn_unused_configs = true
pretty = true
strict = true
disallow_any_explicit = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.sample_data",
]
disallow_untyped_defs = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=columbo --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]
verbosity_assertions = 2

[tool.coverage.run]
branch = true
data_file = "/tmp/columbo_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# linting and formatting with ruff
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is standard in pytest
]
"docs/examples/**/*.py" = [
    "S311",  # random is fine for examples, not used for security
]
# Generic type aliases with TypeVars must use Union[] syntax for mypy compatibility
"columbo/_types.py" = ["UP007"]
"columbo/_interaction.py" = ["UP007"]

[tool.ruff.lint.isort]
known-first-party = ["columbo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "columbo/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "Columbo - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""

[[tool.hyper-bump-it.files]]
file_glob = ".github/ISSUE_TEMPLATE/bug_report.md"
search_format_pattern = "`columbo` Version [e.g. {version}]"
