[metadata]
name = columbo
url = https://github.com/wayfair-incubator/columbo
author = Patrick Lannigan
author_email = plannigan@wayfair.com
version = 0.11.0
description = Specify a dynamic set of questions to ask a user and get their answers.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]

python_requires = >=3.6
install_requires =
    dataclasses~=0.8; python_version < '3.7'
    prompt-toolkit~=3.0
    typing_extensions~=3.7; python_version < '3.8'
packages = find:

[flake8]
max-line-length = 88
max-complexity = 8
ignore = W503,E501
builtins = unicode
tee = True
exclude = venv,env,.venv,scratch

[options.package_data]

columbo = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

