[metadata]
name = columbo
url = https://github.com/plannigan/columbo
author = Patrick Lannigan
author_email = p.lannigan@gmail.com
version = 0.13.0.post1
description = Specify a dynamic set of questions to ask a user and get their answers.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]

python_requires = >=3.8
install_requires =
    prompt-toolkit~=3.0
packages = find:

[options.package_data]

columbo = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

